<resources>
    <string name="app_name">SoundFX</string>
    <string name="sfx_library_and_previewer">SFX Library and Previewer</string>
    <string name="profile">Profile</string>
    <string name="library">Library</string>
    <string name="anthony_rafael"><a href="https://github.com/Anthony-Citizen">Anthony Rafael</a></string>
    <string name="_00000038087">00000038087</string>
    <string name="input">Name</string>
    <string name="login">Login</string>
    <string name="login_form">Login Form</string>
    <string name="title_activity_library_main">LibraryMain</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="https_www_geeksforgeeks_org"><a href="https://www.geeksforgeeks.org/">https://www.geeksforgeeks.org/</a></string>
    <string name="referensi">REFERENSI</string>
    <string name="https_www_youtube_com"><a href="https://www.youtube.com/">https://www.youtube.com/</a></string>
    <string name="https_stackoverflow_com"><a href="https://stackoverflow.com/">https://stackoverflow.com/</a></string>
    <string name="https_pixabay_com_sound_effects"><a href="https://pixabay.com/sound-effects/">https://pixabay.com/sound-effects/</a></string>
    <string name="https_www_tabnine_com"><a href="https://www.tabnine.com/">https://www.tabnine.com/</a></string>
    <string name="https_www_flaticon_com"><a href="https://www.flaticon.com/">https://www.flaticon.com/</a></string>
</resources>