<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/tvMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/sfx_library_and_previewer"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/sound"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"/>

        <Button
            android:id="@+id/btnLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/library"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"/>

    </LinearLayout>
</LinearLayout>